Se agregaron los estilos para el botón aceptar del login

--- a/css/login.css
+++ b/css/login.css
@@ -5,6 +5,10 @@ div.menuLogueo {
 	bottom: -130px;
 	}
  
+div.botonAceptar {
+		display: flex;
+	justify-content: center;
+}  
 /*
  codigo duplicado. 
 */
