Faltaban estilos para el footer

--- a/css/administracion.css
+++ b/css/administracion.css
@@ -67,3 +67,21 @@ div.search-container {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+
+
+ footer.bottom-page-footer { /* PIE*/
+    position: absolute;
+    bottom: 0;
+    width: 99%;
+}
+
+p.left-footer-paragraph { /*parrafo-pie */
+    float: left;
+    margin: 0.3%;
+}
+
+p.right-footer-paragraph { /*parrafo-version*/
+    float: right;
+    margin: 0.3%;
+}
