--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,14 @@
 /** contiene un input de tipo search,
  * lo hacemos flotar a la derecha */
 
-div.search-container {
+.search-container {
   float: right;
 }
 
 
 /** contenedor de label-text-container */
 
-@media (max-width: 599px) {
+@media (max-width: 640px) {
   #header .container {
     width: 100%;
   }
