--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,10 @@
   .container {
     width: 100%;
   }
+  .label-text-container {
+    display: flex;
+    justify-content: center;
+  }
   #header.container{
    /* We want the header to have a static height, 
    it will always take up just as much space as it needs.  */
@@ -49,8 +53,4 @@
 
 .label-text {
   display: inline-block;
-}
-
-.label-text-container {
-  display: flex;
 }
