Revert "Update index.css"
This reverts commit e9b7e91138e28b1af1c48f0870a508b3b743ba7f

--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,9 @@
   .container {
     width: 100%;
   }
-
+  .label-text-container {
+    display: flex;
+  }
   #header.container{
    /* We want the header to have a static height, 
    it will always take up just as much space as it needs.  */
