--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@
   }
   .label-text-container {
     display: flex;
+    justify-content: center;
   }
   #header.container{
    /* We want the header to have a static height, 
