Page footer: usamos mediaquery para que se posicione bien tanto en pantallas moviles (acostado y parado) y pc

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,20 @@
 /** este footer se va a posicionar siempre al final
- * el width en 99% es porque sino queda mas ancho que el head  */
+ * el width en 99% es porque sino queda mas ancho que el head
+ con los mediaquery logramos que se posicione bien tanto en pantallas moviles (acostado y parado) y pc */
 
-footer.bottom-page-footer {
-    /*PIE*/
-    position: absolute;
-    bottom: 0;
-    width: 99%;
+@media (min-width: 640px) and (min-height: 361px) { 
+        footer.bottom-page-footer {
+        position: absolute;
+        bottom: 0;
+        width: 99%;
+    }
 }
+
 
 
 /** parrafo ubicado a la izquierda en el pie de pagina */
 
 p.left-footer-paragraph {
-    /*PARRAFO-PIE*/
     float: left;
     margin: 0.3%;
 }
@@ -21,7 +23,6 @@ p.left-footer-paragraph {
 /** parrafo ubicado a la derecha en el pie de pagina */
 
 p.right-footer-paragraph {
-    /*PARRAFO-VERSION*/
     float: right;
     margin: 0.3%;
 }
