--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,17 @@
 /** contiene un input de tipo search,
  * lo hacemos flotar a la derecha, solamente en pc */
 
-@media (min-width: 640px) { 
+@media (min-width: 640px) {
   div.search-container {
     float: right;
   }
 }
 
+
 /** pero si estamos en celulares, que no flote y el margen es para
 que quede bien posicionado y no se corten los bordes del input */
 
-@media not all and (min-width: 640px) { 
+@media not all and (min-width: 640px) {
   div.search-container {
     margin-top: 5px;
     margin-left: 3px;
@@ -42,4 +43,17 @@ h3.label-text-header {
 
 div.label-text {
   display: inline-block;
+}
+
+
+/** este footer se va a posicionar siempre al final
+ * el width en 99% es porque sino queda mas ancho que el head
+ con los mediaquery logramos que se posicione bien tanto en pantallas moviles (acostado y parado) y pc */
+
+@media (min-width: 640px) and (min-height: 390px) {
+  footer.index-bottom-page-footer {
+    position: absolute;
+    bottom: 0;
+    width: 99%;
+  }
 }
