--- a/css/administracion.css
+++ b/css/administracion.css
@@ -1,25 +1,50 @@
 /** contiene un input de tipo search,
  * lo hacemos flotar a la derecha */
+@media (min-width: 640px) {
+  div.search-container {
+    float: right;
+    display: flex;
+  }
+}
 
-div.search-container {
-  float: right;
-  display: flex;
+@media not all and (min-width: 640px) {
+  div.search-container {
+    margin-top: 5px;
+    margin-left: 2.5px;
+  }
 }
 
 
 /* Dropdown Button */
 
 .dropbtn {
-  margin-right: 20px;
-  margin-top: -5px;
+  /*margin-right: 20px; */
+
+  margin-top: 7px;
   background-color: transparent;
   font-weight: bold;
-  padding: 5%;
+  padding: 0%;
   border: none;
   cursor: pointer;
   display: block;
+
 }
 
+/*esto se hace solamente si es un celular */
+@media (min-height: 640px) {
+  .dropbtn {
+     margin-left:5px;
+   }
+}
+
+/*esto se hace solamente si es una pc */
+@media not all and (min-height: 640px) {
+  .dropbtn {
+    float: right;
+    margin-right:8px;
+    margin-top:3px;
+   }
+}
 
 /* The container <div> - needed to position the dropdown content */
 
