--- a/css/administracion.css
+++ b/css/administracion.css
@@ -1,9 +1,16 @@
-/** contiene un input de tipo search,
- * lo hacemos flotar a la derecha */
+/** contiene un input de tipo search */
 
 div.search-container {
-  float: right;
-  display: flex;
+  display: inline-block;
+}
+
+
+/** si es PC hay que hacerlo flotar a la derecha */
+
+@media (min-width: 640px) {
+  div.search-container {
+    float: right;
+  }
 }
 
 
@@ -39,11 +46,21 @@ div.search-container {
 }
 
 
-/* The container <div> - needed to position the dropdown content */
+/* contenedor de boton desplegable "administracion", estilo para PC  */
 
-.dropdown {
-  position: relative;
-  display: inline;
+@media (min-width: 640px) {
+  .dropdown {
+    display: inline-block;
+  }
+}
+
+
+/* contenedor de boton desplegable "administracion", estilo para celulares  */
+
+@media not all and (min-width: 640px) {
+  .dropdown {
+    float: right;
+  }
 }
 
 
