--- a/css/index.css
+++ b/css/index.css
@@ -59,3 +59,15 @@ div.label-text {
     width: 99%;
   }
 }
+
+@media (min-width: 640px) {
+  footer.index-bottom-page-footer {
+    font-size: 14px;
+  }
+}
+
+@media not all and (min-width: 640px) {
+  footer.index-bottom-page-footer {
+    font-size: 11px;
+  }
+}
