--- a/css/index.css
+++ b/css/index.css
@@ -116,47 +116,9 @@ a.moreInfo:active {
 }
 
 
-div.btnMoreInfo {
+.btnMoreInfo {
   text-align:center;
 }
-
-/* BOTON BUSCAR*/
-#btnSubmit{
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-  background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-  background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-  background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-  background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-  background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
-  background-color:#599bb3;
-  -moz-border-radius:8px;
-  -webkit-border-radius:8px;
-  border-radius:8px;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:11px;
-  font-weight:bold;
-  padding:5px;
-  text-decoration:none;
-}
-#btnSubmit:hover {
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-  background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-  background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-  background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-  background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-  background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
-  background-color:#408c99;
-}
-#btnSubmit:active {
-  position:relative;
-  top:1px;
-}
-
 
 /* texto con transparencia al pasar el raton*/ 
 span.text1 {
@@ -168,6 +130,6 @@ span.text1 {
 }
 
 span.text1:hover {
-      background: transparent;
-      color: #B2EFCE  ;
+     background: transparent;
+      color: #B2EFCE;
 }
