--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,17 @@ hr.separatingStripe{
   position:relative;
   top:1px;
 }
+
+
+span.text1 {
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+    color: #000000;
+    font-weight: bold;
+    font-family: 'Orbitron', sans-serif;
+    text-align: center;
+}
+
+span.text1:hover {
+      background: transparent;
+      color: #B2EFCE  ;
+}
