--- a/css/login.css
+++ b/css/login.css
@@ -9,6 +9,7 @@ div.login-menu {
 div.login-accept-button {
   display: flex;
   justify-content: center;
+   margin-bottom: 70px;
 }
 
 div.login-menu-title {
