Corregidor footer en index para celulares

--- a/css/index.css
+++ b/css/index.css
@@ -46,69 +46,72 @@ div.label-text {
 }
 
 
-/** este footer se va a posicionar siempre al final
- * el width en 99% es porque sino queda mas ancho que el head
- con los mediaquery logramos que se posicione bien tanto en pantallas moviles (acostado y parado) y pc */
+/** estilo del footer para PC */
 
-@media (min-width: 640px) and (min-height: 390px) {
+@media (min-width: 640px) {
   footer.index-bottom-page-footer {
+    font-size: 14px;
+    width: 99%;
     position: absolute;
     bottom: 0;
-    width: 99%;
   }
 }
 
 
+/** estilo del footer parac celulares */
+
+@media not all and (min-width: 640px) {
+  footer.index-bottom-page-footer {
+    font-size: 11px;
+    width: 97%;
+  }
+}
 
 
+/* BOTONES MAS INFO */
 
-
-/* */
-/*BOTONES MAS INFO*/
-a.moreInfo{
--moz-box-shadow: 3px 4px 0px 0px #899599;
+a.moreInfo {
+  -moz-box-shadow: 3px 4px 0px 0px #899599;
   -webkit-box-shadow: 3px 4px 0px 0px #899599;
   box-shadow: 3px 4px 0px 0px #899599;
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #bab1ba));
-  background:-moz-linear-gradient(top, #ededed 5%, #bab1ba 100%);
-  background:-webkit-linear-gradient(top, #ededed 5%, #bab1ba 100%);
-  background:-o-linear-gradient(top, #ededed 5%, #bab1ba 100%);
-  background:-ms-linear-gradient(top, #ededed 5%, #bab1ba 100%);
-  background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#bab1ba',GradientType=0);
-  background-color:#ededed;
-  -moz-border-radius:15px;
-  -webkit-border-radius:15px;
-  border-radius:15px;
-  border:1px solid #d6bcd6;
-  display:inline-block;
-  cursor:pointer;
-  color:#000000;
-  font-family:Arial;
-  font-size:17px;
-  padding:7px 25px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #e1e2ed;
-
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #bab1ba));
+  background: -moz-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+  background: -webkit-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+  background: -o-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+  background: -ms-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+  background: linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#bab1ba', GradientType=0);
+  background-color: #ededed;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
+  border: 1px solid #d6bcd6;
+  display: inline-block;
+  cursor: pointer;
+  color: #000000;
+  font-family: Arial;
+  font-size: 17px;
+  padding: 7px 25px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #e1e2ed;
 }
+
 a.moreInfo:hover {
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bab1ba), color-stop(1, #ededed));
-  background:-moz-linear-gradient(top, #bab1ba 5%, #ededed 100%);
-  background:-webkit-linear-gradient(top, #bab1ba 5%, #ededed 100%);
-  background:-o-linear-gradient(top, #bab1ba 5%, #ededed 100%);
-  background:-ms-linear-gradient(top, #bab1ba 5%, #ededed 100%);
-  background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#bab1ba', endColorstr='#ededed',GradientType=0);
-  background-color:#bab1ba;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bab1ba), color-stop(1, #ededed));
+  background: -moz-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+  background: -webkit-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+  background: -o-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+  background: -ms-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+  background: linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#bab1ba', endColorstr='#ededed', GradientType=0);
+  background-color: #bab1ba;
 }
+
 a.moreInfo:active {
-  position:relative;
-  top:1px;
+  position: relative;
+  top: 1px;
 }
-
-
 
 div.btnMoreInfo {
-  text-align:center;
+  text-align: center;
 }
-
