--- a/css/style.css
+++ b/css/style.css
@@ -46,74 +46,76 @@ p.right-footer-paragraph {
 /* nuevos estilos */
 
 body {
-  color: black; /*color del texto*/
+  color: black;
+  /*color del texto*/
   background-color: #72BFB0;
   font-family: "Calibri";
-       }
-
-
-a.link1:hover { 
-	text-decoration: none; /*esto quita el subrayado*/ 
-	color: #ffffff; /*se sobreentiende*/ 
-	afont-weight: bold; 
-} 
-
-hr.separatingStripe{
-   height: 1px;
-   border: 0;
-   background-color: #000000;
-     margin-top: 14px;
 }
 
+a.link1:hover {
+  text-decoration: none;
+  /*esto quita el subrayado*/
+  color: #ffffff;
+  font-weight: bold;
+}
+
+hr.separatingStripe {
+  height: 1px;
+  border: 0;
+  background-color: #000000;
+  margin-top: 14px;
+}
 
 
 /* BOTON SUBMIT (aceptar en el login y buscar en el index*/
-#btnSubmit{
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-  background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-  background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-  background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-  background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-  background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
-  background-color:#599bb3;
-  -moz-border-radius:8px;
-  -webkit-border-radius:8px;
-  border-radius:8px;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff;
-  font-family:Arial;
-  font-size:11px;
-  font-weight:bold;
-  padding:7px;
-  text-decoration:none;
-}
-#btnSubmit:hover {
-  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-  background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-  background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-  background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-  background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-  background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
-  background-color:#408c99;
-}
-#btnSubmit:active {
-  position:relative;
-  top:1px;
+
+#btnSubmit {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
+  background: -moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
+  background: -webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
+  background: -o-linear-gradient(top, #599bb3 5%, #408c99 100%);
+  background: -ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
+  background: linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99', GradientType=0);
+  background-color: #599bb3;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 11px;
+  font-weight: bold;
+  padding: 7px;
+  text-decoration: none;
 }
 
+#btnSubmit:hover {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
+  background: -moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
+  background: -webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
+  background: -o-linear-gradient(top, #408c99 5%, #599bb3 100%);
+  background: -ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
+  background: linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3', GradientType=0);
+  background-color: #408c99;
+}
+
+#btnSubmit:active {
+  position: relative;
+  top: 1px;
+}
 
 span.text1 {
-    text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
-    color: #000000;
-    font-weight: bold;
-    font-family: 'Orbitron', sans-serif;
-    text-align: center;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
+  color: #000000;
+  font-weight: bold;
+  font-family: 'Orbitron', sans-serif;
+  text-align: center;
 }
 
 span.text1:hover {
-      background: transparent;
-      color: #B2EFCE  ;
+  background: transparent;
+  color: #B2EFCE;
 }
