--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,8 @@ h3.label-text-header {
 
 div.label-text {
   display: inline-block;
+  margin-left:5px;
+  margin-right:5px;
 }
 
 footer.index-bottom-page-footer {
