Creo un index.php que lo que hace es mostrar la pagina tal y como la teniamos antes, pero con la nueva estructura de directorios. Para que funcione hay que meter todo en la carpeta donde el apache sirve los archivos, por ej, /var/www/html

--- a/templates/administracion.html
+++ b/templates/administracion.html
@@ -4,23 +4,23 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/administracion.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/administracion.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <title>Hospital Dr. Ricardo Gutierrez - Administración</title>
 </head>
 
 <body>
-  <nav>  
-    <a href="index.html" class="link1">Inicio</a>  
+  <nav>
+    <a href="/templates/index.html" class="link1">Inicio</a>
     <a href="#Paciente"  class="link1"> Paciente</a>
-    <div class="dropdown"> 
+    <div class="dropdown">
         <button class="dropbtn">Administracion&darr;</button>
       <div class="dropdown-content"> <a href="#">Usuarios</a> <a href="#Roles">Roles</a> <a href="#Permisos">Permisos</a> </div>
     </div>
     <div class="search-container">
-      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda"> 
-        <button type= "submit" id='btnSubmit'> Busqueda </button>  
-        <a href="login.html" class= "link1" > LOGIN </a>        
+      <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda">
+        <button type= "submit" id='btnSubmit'> Busqueda </button>
+        <a href="/templates/login.html" class= "link1" > LOGIN </a>
       </form>
     </div>
   </nav>
