--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,18 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/index.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <title>Hospital Dr. Ricardo Gutierréz</title>
 </head>
 
 <body>
- <nav> LOGO |  <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
+ <nav> LOGO |  <a href="/templates/index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
     <div class="search-container">
       <form action="#" id="searchform">
           <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
            <button type= "submit" id='btnSubmit'> Buscar </button>
-           <a href="login.html" class='link1'> LOGIN </a>
+           <a href="/templates/login.html" class='link1'> LOGIN </a>
       </form>
 
     </div>
