--- a/templates/login.html
+++ b/templates/login.html
@@ -4,21 +4,21 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="css/login.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/login.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
   <title>Hospital Dr. Ricardo Gutierréz</title>
 </head>
 
 <body>
 
-  <nav> LOGO | <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a> </nav>
+  <nav> LOGO | <a href="/templates/index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a> </nav>
   <hr class="separatingStripe">
   <div class="login-menu">
    <div class="login-menu-title">
     <span class="text1"> Iniciar sesión </span>
    </div>
 
-    <form action="administracion.html" method="post">
+    <form action="/templates/administracion.html" method="post">
     <br>
       <div>Usuario </div>
       <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
