--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,8 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends 'plantilla_base.html' %}
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="../css/index.css">
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
-  <title>Hospital Dr. Ricardo Gutierréz</title>
-</head>
+{% block head%} <link rel="stylesheet" type="text/css" href="../css/index.css">  {% endblock %}
+{% block body%}
 
-<body>
- <nav> LOGO |  <a href="/templates/index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
-    <div class="search-container">
-      <form action="#" id="searchform">
-          <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
-           <button type= "submit" id='btnSubmit'> Buscar </button>
-           <a href="/templates/login.html" class='link1'> LOGIN </a>
-      </form>
-
-    </div>
-  </nav>
-  <hr class= "separatingStripe">
   <div class="label-text-container">
     <div class="label-text">
      <h3 class="label-text-header"> <span class="text1">El Hospital</span> </h3>
@@ -56,11 +38,4 @@
          </div>
     </div>
   </div>
-  <footer class="index-bottom-page-footer">
-    <hr class= "separatingStripe">
-    <p class="left-footer-paragraph">Proyecto de Software 2017 - Hospital Dr. Ricardo Gutiérrez</p>
-    <p class="right-footer-paragraph">v 0.1.0</p>
-  </footer>
-</body>
-
-</html>
+ {% endblock %}
