Se corrigió la ruta al archivo index.html

--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -12,7 +12,7 @@
     </head>
 
  <body> 
-    <nav> LOGO |  <a href="/templates/index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
+    <nav> LOGO |  <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
     <div class="search-container">
       <form action="#" id="searchform">
           <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
