Uso de controladores en todas las paginas

--- a/templates/administracion.html
+++ b/templates/administracion.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav>
-    <a href="/templates/index.html" class="link1">Inicio</a>
+    <a href="./?action=index" class="link1">Inicio</a>
     <a href="#Paciente"  class="link1"> Paciente</a>
     <div class="dropdown">
         <button class="dropbtn">Administracion&darr;</button>
@@ -20,7 +20,7 @@
     <div class="search-container">
       <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda">
         <button type= "submit" id='btnSubmit'> Busqueda </button>
-        <a href="/templates/login.html" class= "link1" > LOGIN </a>
+        <a href="./?action=login" class= "link1" > LOGIN </a>
       </form>
     </div>
   </nav>
