--- a/templates/login.html
+++ b/templates/login.html
@@ -11,14 +11,14 @@
 
 <body>
 
-  <nav> LOGO | <a href="/templates/index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a> </nav>
+  <nav> LOGO | <a href="./?action=index" class='link1'>Hospital Dr. Ricardo Gutiérrez</a> </nav>
   <hr class="separatingStripe">
   <div class="login-menu">
    <div class="login-menu-title">
     <span class="text1"> Iniciar sesión </span>
    </div>
 
-    <form action="/templates/administracion.html" method="post">
+    <form action="./?action=admin" method="post">
     <br>
       <div>Usuario </div>
       <input type="text" required name="usuario" id="usuario" title="usuario" placeholder="Usuario">
