--- a/templates/plantilla_base.html
+++ b/templates/plantilla_base.html
@@ -12,12 +12,12 @@
     </head>
 
  <body> 
-    <nav> LOGO |  <a href="index.html" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
+    <nav> LOGO |  <a href="./?action=index" class='link1'>Hospital Dr. Ricardo Gutiérrez</a>
     <div class="search-container">
       <form action="#" id="searchform">
           <input type="text" placeholder="Buscar aqu&iacute;..." name="busqueda" id="busqueda" title="busqueda">
            <button type= "submit" id='btnSubmit'> Buscar </button>
-           <a href="/templates/login.html" class='link1'> LOGIN </a>
+           <a href="./?action=login" class='link1'> LOGIN </a>
       </form>
 
     </div>
