--- a/templates/administracion.html
+++ b/templates/administracion.html
@@ -15,7 +15,7 @@
     <a href="#Paciente"  class="link1"> Paciente</a>
     <div class="dropdown">
         <button class="dropbtn">Administracion&darr;</button>
-      <div class="dropdown-content"> <a href="#">Usuarios</a> <a href="#Roles">Roles</a> <a href="#Permisos">Permisos</a> </div>
+      <div class="dropdown-content"> <a href="./?action=users_list">Usuarios</a> <a href="#Roles">Roles</a> <a href="#Permisos">Permisos</a> </div>
     </div>
     <div class="search-container">
       <form action="#"> <input type="search" placeholder="Buscar.." name="busqueda">
