--- a/templates/users.html
+++ b/templates/users.html
@@ -1,14 +1,28 @@
-<!DOCTYPE html>
-<html lang="es">
+{% extends 'plantilla_base.html' %}
 
-<head>
-  <title>Usuarios</title>
-</head>
+{% block title%} Usuarios {% endblock %}
 
-<body>
+
+{% block body%}
+
   <h1>Usuarios</h1>
-  <ul> {% for item in users %}
-    <li>item</li> {% endfor %} </ul>
-</body>
+  <table>
+<tr>
+  <td><strong>Nombre</strong></td>
+  <td><strong>Apellido</strong></td>
+  <td><strong>Usuario</strong></td>
+</tr>
+        {% for item in users %}
+          	<tr> 
+            <td>{{ item.first_name }}</td>
+            <td>{{ item.last_name }}</td>
+            <td>{{ item.username }}</td>
+                </tr>
+        {% endfor %}
 
-</html>
+  <table>
+{% endblock %}
+
+
+
+
