--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,11 @@
           <br> <br>
           <div class="login-accept-button">
             <button type= "submit" id='btnSubmit'> Aceptar </button>
+            
           </div>
+
       </form>
+      <form action="./?action=pacient_index" method="post">
+        <button type= "submit" id='btnSubmit'> Boton de Pacientes (Prueba) </button> <!-- Boton de prueba para acceder al listado de pacientes. VER -->
   </div>
 {% endblock %}
