--- a/templates/login.html
+++ b/templates/login.html
@@ -20,5 +20,14 @@
             <button type= "submit" id='btnSubmit'> Aceptar </button>
           </div>
       </form>
+
+      <form action="./?action=user_create" method="post">
+          <button type= "submit" id='btnSubmit'> Boton de prueba - alta usuario </button>
+      </form>
+
+
   </div>
+
+
+
 {% endblock %}
