se agrego un boton de prueba para el alta de usuarios

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,12 @@
 
       </form>
       <form action="./?action=pacient_index" method="post">
-        <button type= "submit" id='btnSubmit'> Boton de Pacientes (Prueba) </button> <!-- Boton de prueba para acceder al listado de pacientes. VER -->
+        <button type= "submit" id='btnSubmit'> Boton de prueba - Pacientes  </button> <!-- Boton de prueba para acceder al listado de pacientes. VER -->
+    </form>
+    
+      <form action="./?action=user_create" method="post">
+          <button type= "submit" id='btnSubmit'> Boton de prueba - alta usuario </button>
+      </form>
+
   </div>
 {% endblock %}
