--- a/templates/login.html
+++ b/templates/login.html
@@ -18,16 +18,17 @@
           <br> <br>
           <div class="login-accept-button">
             <button type= "submit" id='btnSubmit'> Aceptar </button>
+            
           </div>
-      </form>
 
+      </form>
+      <form action="./?action=pacient_index" method="post">
+        <button type= "submit" id='btnSubmit'> Boton de prueba - Pacientes  </button> <!-- Boton de prueba para acceder al listado de pacientes. VER -->
+    </form>
+    
       <form action="./?action=user_create" method="post">
           <button type= "submit" id='btnSubmit'> Boton de prueba - alta usuario </button>
       </form>
 
-
   </div>
-
-
-
 {% endblock %}
