Saque el boton de prueba de pacientes que se encontraba en el login.html, como encontre que habia un sector de pacients en administracion.html puse el listado de pacientes ahi

--- a/templates/administracion.html
+++ b/templates/administracion.html
@@ -4,7 +4,7 @@
 {% block title%}  Hospital Dr. Ricardo Gutierrez - Administración {% endblock %}
 
 {% block nav %}
-  <a href="#Paciente"  class="link1"> Paciente</a>
+  <a href="./?action=pacient_index"  class="link1"> Pacientes</a>
   <div class="dropdown"> 
     <button class="dropbtn">Administracion&darr;</button>
       <div class= " dropdown-content" >
